# fluence_transaction

./: .gitignore
aqua/: dht.aqua  fevm_json_rpc.aqua  meta-contract.aqua  node.aqua  scheduled.aqua  validator-schedule-script.aqua  validator.aqua
builtin-package/: blueprint.json  crypto.wasm  crypto_config.json  ipfsdag.wasm  ipfsdag_config.json  node.wasm  node_config.json  sqlite3.wasm  sqlite3_config.json
builtin-package/scheduled/: transaction-scheduled-scripts.getEventCron_30.air  transaction-scheduled-scripts.getPendingTxs_5.air
scripts/: batch-txs.sh  dummy-contract.json  dummy-contract.sh  dummy-contract2.json  dummy-cron-1155.json  dummy-cron-1155.sh  dummy-cron-721.json  dummy-cron-721.sh  dummy-cron.json  dummy-cron.sh  dummy-metadata-raw.json  dummy-metadata-raw.sh  dummy-metadata.json  dummy-metadata.sh  dummy-metadata2.json  dummy-txs.json  dummy.json  get-metadata.sh  get-txs.sh  pending-txs.sh  schedule-script.sh
services/: .gitignore  Cargo.toml  Config.toml  build.sh
services/artifacts/: crypto.wasm  dht.wasm  ipfsdag.wasm  node.wasm
services/configs/: deploy-cfg.json
services/crypto/: Cargo.toml
services/crypto/src/: ed25519.rs  keypair.rs  main.rs  secp256k1.rs
services/dht/: Cargo.toml
services/dht/src/: defaults.rs  error.rs  main.rs  metadatas.rs  metadatas_impl.rs  record.rs  result.rs  storage_impl.rs  transaction.rs  transactions_impl.rs
services/ipfsdag/: Cargo.toml
services/ipfsdag/src/: block.rs  main.rs
services/node/: Cargo.toml
services/node/src/: block.rs  cron.rs  cron_tx.rs  data_types.rs  defaults.rs  error.rs  main.rs  meta_contract.rs  meta_contract_impl.rs  metadatas.rs  metadatas_impl.rs  (+8 more)
services/scripts/: deploy.sh
services/types/: Cargo.toml
services/types/src/: dht.rs  get.rs  ipfs.rs  keypair.rs  lib.rs  result.rs  retrieval.rs
