[package]
name = "crypto"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "crypto"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "0.7.1", features = ["logger"] }
log = "0.4.14"
ed25519-compact = "2"
base64 = "0.20.0"
eyre = "0.6.5"
libsecp256k1 = "0.7.1"
tiny-keccak = "2.0.2"
ethereum-types = "0.14.1"
hex = "0.4.3"
base58 = "0.2"

types = { path = "../types" }