[package]
name = "dht"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marine-rs-sdk = { version = "0.7.1", features = ["logger"] }
marine-sqlite-connector = "0.8.0"
eyre = "0.6.5"
log = "0.4.14"
serde = "1.0.152"
serde_json = "1.0.91"
fstrings = "0.2.3"
thiserror = "1.0.38"
sha2 = "0.10.6"
bs58 = "0.4.0"

types = { path = "../types" }