

[package]
name = "ipfsdag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marine-rs-sdk = { version = "0.7.1", features = ["logger"] }
# multiaddr = { version = "0.11.2", package = "fluence-fork-parity-multiaddr" }
log = "0.4.14"
eyre = "0.6.5"
serde_json = "1.0.64"
serde = "1.0.152"

types = { path = "../types" }